--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -13,8 +13,8 @@
     "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
-    "@react-three/drei": "^10.1.2",
-    "@react-three/fiber": "^9.1.2",
+    "@react-three/drei": "^9.0.0",
+    "@react-three/fiber": "^8.13.7",
     "@vapi-ai/web": "^2.3.6",
     "ai": "^4.3.16",
     "class-variance-authority": "^0.7.1",
@@ -24,11 +24,12 @@
     "firebase-admin": "^13.4.0",
     "jspdf": "^2.5.1",
     "lucide-react": "^0.511.0",
-    "next": "15.3.3",
+    "maath": "^0.10.8",
+    "next": "^14.2.3",
     "next-themes": "^0.4.6",
     "random": "^5.4.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.56.4",
     "sonner": "^2.0.3",
     "stripe": "^12.18.0",
